--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^20.12.7",
     "antd": "^5.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
